index.html update 49, 62

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
            
         </div>
         <div>
+            <a id="exploring"></a>
             <h2>Exploring </h2>
             <h4> been about that life </h4>
             <p>
@@ -58,6 +59,7 @@
             
         </div>
         <div>
+            <a id="gardening""></a>
             <h2>Gardening</h2>
             <h4> rookie farmer </h4>
             <p>
